--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David's Etch a Sketch</title>
-    <script src = "script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src = "script.js" defer></script>
 </head>
 <body>
+    <button id="btn1">Change grid size by clicking this.</button>
     <div id="container"></div>
 </body>
 </html>
