Implement Control. Space to Reset. Hold shift while hover to draw

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <button id="btn1">Change grid size by clicking this.</button>
+    <div id="Info">Hold Shift while hovering over the square to draw! Press R to reset!</div>
     <div id="container"></div>
 </body>
 </html>
