--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <button id="btn1">Change grid size by clicking this.</button>
+    <label for="favcolor">Select your favorite color:</label>
+    <input type="color" id="favcolor" value="#ff0000">
     <div id="Info">Hold Shift while hovering over the square to draw! Hold Q while hovering over the square to erase! Finally, press R to reset!</div>
     <div id="container"></div>
 </body>
