--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <input type="color" id="favcolor" value="#ff0000">
     <div id="Info">Hold Shift while hovering over the square to draw! Hold Q while hovering over the square to erase! Finally, press R to reset!</div>
     <div id="container"></div>
+    <h2>Pixel Art Pad!</h2>
 </body>
 </html>
