Create separate div for container and control menu

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <script src = "script.js" defer></script>
 </head>
 <body>
-    <button id="btn1">Change grid size by clicking this.</button>
-    <label for="favcolor">Select your favorite color:</label>
-    <input type="color" id="favcolor" value="#ff0000">
-    <div id="Info">Hold Shift while hovering over the square to draw! Hold Q while hovering over the square to erase! Finally, press R to reset!</div>
-    <div id="container"></div>
-    <h2>Pixel Art Pad!</h2>
+    <div id="Main">
+        <div>
+            <button id="btn1">Change grid size by clicking this.</button>
+            <label for="favcolor">Select your favorite color:</label>
+            <input type="color" id="favcolor" value="#ff0000">
+            <div id="Info">Hold Shift while hovering over the square to draw! Hold Q while hovering over the square to erase! Finally, press R to reset!</div>
+        </div>
+        <div id="container"></div>
+    </div>
+    
 </body>
 </html>
