--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="Main">
-        <div>
+        <div id="RightBox">
             <button id="btn1">Change grid size by clicking this.</button>
             <label for="favcolor">Select your favorite color:</label>
             <input type="color" id="favcolor" value="#ff0000">
