--- a/index.html
+++ b/index.html
@@ -10,15 +10,29 @@
 <body>
     <div id="Main">
         <div id="RightBox">
-            <label>Change your Grid Size by adjusting the slider below!</label>
-            <div id="GridSizeBox">
-                <input type="range" min ="1" max="64" value="32" class="slider" id="GridSizeRange" step="7"
-                oninput="setupGrid(this.value)">
+            <div>
+                <label>Change your Grid Size by adjusting the slider below!</label>
+                <div id="GridSizeBox">
+                    <input type="range" min ="1" max="64" value="32" class="slider" id="GridSizeRange" step="7"
+                    oninput="setupGrid(this.value)">
                 <label id="GridSizeLabel">32</label>
-            </div> 
+                </div> 
+            </div>
+            <div>
+                <div id="ColorBox">
+                    <label for="favcolor">Select your favorite color:</label>
+                    <input type="color" id="favcolor" value="#ff0000">
+                </div>
+            </div>
+            <div>
+                <label>Adjust the color intensity!</label>
+                <div id="ColorIntensityBox">
+                    <input type = "range" min="0.1" max="1.0" value="0.1" class="slider" id="ColorIntensityRange" step="0.1">
+                    <label id="ColorIntensityLabel">0.1</label>
+                </div>
+            </div>
             
-            <label for="favcolor">Select your favorite color:</label>
-            <input type="color" id="favcolor" value="#ff0000">
+
             <div id="Info">Hold Shift while hovering over the square to draw! Hold Q while hovering over the square to erase! Finally, press R to reset!</div>
         </div>
         <div id="container"></div>
