--- a/index.html
+++ b/index.html
@@ -10,30 +10,33 @@
 <body>
     <div id="Main">
         <div id="RightBox">
-            <div>
+            <div class ="GenericBox">
+                <label style="color: rgb(194, 5, 5); -webkit-text-stroke: 0.05px black;">Warning! If you change the Grid Size slider, your drawing will be erased!</label>
                 <label>Change your Grid Size by adjusting the slider below!</label>
                 <div id="GridSizeBox">
                     <input type="range" min ="1" max="64" value="32" class="slider" id="GridSizeRange" step="7"
                     oninput="setupGrid(this.value)">
-                <label id="GridSizeLabel">32</label>
+                    <label id="GridSizeLabel">32</label>
                 </div> 
             </div>
-            <div>
-                <div id="ColorBox">
-                    <label for="favcolor">Select your favorite color:</label>
-                    <input type="color" id="favcolor" value="#ff0000">
-                </div>
-            </div>
-            <div>
+
+            <div class ="GenericBox">
                 <label>Adjust the color intensity!</label>
                 <div id="ColorIntensityBox">
                     <input type = "range" min="0.1" max="1.0" value="0.1" class="slider" id="ColorIntensityRange" step="0.1">
                     <label id="ColorIntensityLabel">0.1</label>
                 </div>
+                <div id="ColorBox">
+                    <label for="favcolor">Select your favorite color:</label>
+                    <input type="color" id="favcolor" value="#ff0000">
+                </div>
             </div>
             
-
-            <div id="Info">Hold Shift while hovering over the square to draw! Hold Q while hovering over the square to erase! Finally, press R to reset!</div>
+            <div class ="GenericBox" id="Guide">
+                <label><font color="blue">Shift</font> while hovering over the squares to draw on them!</label>   
+                <label>Hold <font color="blue">Q</font> while hovering over the square to erase drawn squares!</label>
+                <label>Finally, press <font color="blue">R</font> to reset the drawing area!</label>
+            </div>
         </div>
         <div id="container"></div>
     </div>
