Made change to styling of website

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>David's Etch a Sketch</title>
+    <title>Pixel Art Factory</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
     <script src = "script.js" defer></script>
 </head>
 <body>
@@ -37,9 +38,12 @@
                 <label>Hold <font color="blue">Q</font> while hovering over the square to erase drawn squares!</label>
                 <label>Finally, press <font color="blue">R</font> to reset the drawing area!</label>
             </div>
+
+            <div class = "Footer">
+                <label>Made by Pixalte</label>
+            </div>
         </div>
         <div id="container"></div>
     </div>
-    
 </body>
 </html>
