Add pop-up effect when drawing over block

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class = "Footer">
-                <label>Made by Pixalte</label>
+                <label>Site by Pixalte</label>
             </div>
         </div>
         <div id="container"></div>
