Change font to Pixelify Sans. Add shadow styling to the GenericBox. Add a header / title page.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Art Factory</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <script src = "script.js" defer></script>
 </head>
 <body>
+    <div id="Header">Pixel Art Factory</div>
     <div id="Main">
         <div id="RightBox">
             <div class ="GenericBox">
@@ -39,11 +42,14 @@
                 <label>Finally, press <font color="blue">R</font> to reset the drawing area!</label>
             </div>
 
-            <div class = "Footer">
-                <label>Site by Pixalte</label>
+            <div class = "Credit">
+                <label>created by Pixalte</label>
             </div>
         </div>
         <div id="container"></div>
+    </div>
+    <div id="KeyIndicatorBox">
+        
     </div>
 </body>
 </html>
